tests/analyzer/errors/range.ray
fn getFloat() -> float { return 5.6 }

fn main() {
    0..getFloat()
    1.2..5
    true.."oui"
}
